--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -13,10 +13,10 @@ const {} = Astro.props;
     </div>
     <div class="mx-auto max-w-2xl text-center">
         <h2 class="text-3xl font-bold tracking-tight text-brand-navy sm:text-4xl">
-            Join the Team. Build the Community.<br/> If youâ€™ve made it this far, youâ€™re already one of us.
+            Join the Team. Build the Community.<br/> If you have made it this far, you are already one of us.
         </h2>
-        <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-brand-navy/80">At CryptoMondays Zurich, our only filter is attitude and positive vibes â€” skills can always be learned.
-            Reach out to any team member or send us a message with your skills and how youâ€™d like to contribute. Letâ€™s build together.</p>
+        <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-brand-navy/80">At CryptoMondays Zurich, our only filter is attitude and positive vibes, skills can always be learned.
+            Reach out to any team member or send us a message with your skills and how you would like to contribute. Let's build together.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
             <a href="#"
                class="rounded-md bg-brand-vivid px-3.5 py-2.5 border border-brand-vivid text-sm font-semibold text-white shadow-sm transition-colors hover:bg-brand-bold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-bold">
