--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,25 +7,25 @@ const {} = Astro.props;
 <footer aria-labelledby="footer-heading" class="relative border-t border-brand-soft/60 py-24 sm:py-32">
     <h2 id="footer-heading" class="sr-only">Footer</h2>
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
-        <img class="h-16 w-auto" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich">
+        <img class="h-64 w-auto" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich">
         <div class="mt-16 grid grid-cols-2 gap-8 xl:col-span-2 xl:mt-0">
             <div class="md:grid md:grid-cols-2 md:gap-8">
                 <div>
                     <h3 class="text-sm font-semibold leading-6 text-brand-navy">Social Media</h3>
                     <ul role="list" class="mt-6 space-y-4">
                         <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Linkedin</a>
+                            <a href="https://www.linkedin.com/company/cryptomondayszurich/" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Linkedin</a>
                         </li>
                         <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">X</a>
+                            <a href="https://x.com/CryptoMondaysZH" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">X</a>
                         </li>
                         <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">
+                            <a href="https://luma.com/CryptoMondaysZurich" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">
                                 Luma
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">
+                            <a href="https://www.meetup.com/cryptomondays-zurich/" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">
                                 MeetUp
                             </a>
                         </li>
@@ -47,5 +47,5 @@ const {} = Astro.props;
             </div>
         </div>
     </div>
-    <p class="mt-12 text-sm text-brand-navy/60">All rights reserved to C2026 CryptoMondays Zurich.</p>
+    <p class="mt-12 text-sm text-brand-navy/60">© 2026 CryptoMondays Zürich. All rights reserved. </p>
 </footer>
