Links and stetics

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -18,7 +18,7 @@ const {} = Astro.props;
         <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-brand-navy/80">At CryptoMondays Zurich, our only filter is attitude and positive vibes, skills can always be learned.
             Reach out to any team member or send us a message with your skills and how you would like to contribute. Let's build together.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
-            <a href="#"
+            <a href="https://forms.gle/B6oCwQKdVPU6M9ny6"
                class="rounded-md bg-brand-vivid px-3.5 py-2.5 border border-brand-vivid text-sm font-semibold text-white shadow-sm transition-colors hover:bg-brand-bold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-bold">
                 Get started
             </a>
