--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -47,5 +47,5 @@ const {} = Astro.props;
             </div>
         </div>
     </div>
-    <p class="mt-12 text-sm text-brand-navy/60">© 2026 CryptoMondays Zürich. All rights reserved. </p>
+    <p class="mt-12 text-sm text-brand-navy/60 text-center">© 2026 CryptoMondays Zürich. All rights reserved. </p>
 </footer>
