--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ const {} = Astro.props;
                                     </svg>
                                 </a>
                                 <a
-                                    href="https://www.meetup.com/es/cryptomondays-Zürich/"
+                                    href="https://www.meetup.com/es/cryptomondays-zurich/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-brand-navy/80"
@@ -85,7 +85,7 @@ const {} = Astro.props;
 </div>
 
 
-<script type="module" client:load>
+<script type="module">
     const images = [
         "/assets/hero-photo-1.png",
         "/assets/hero-photo-2.png",
